Salesforce CPQ/main/default/objects/InstallProcessorLog__c/InstallProcessorLog__c.object-meta.xml
<CustomObject>
    <customHelpPage>ImportFormatHelp</customHelpPage>
    <description>Logs timestamps for methods within the Install Script</description>
    <label>Install Processor Log</label>
    <nameField>
        <label>Install Processor Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Processor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>