Salesforce CPQ/main/default/objects/InstallProcessorLog__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Timestamp for running the method</description>
    <inlineHelpText>Timestamp for running the method</inlineHelpText>
    <label>Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>