Salesforce CPQ/main/default/objects/InstallProcessorLog__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Package version at the time of running the method</description>
    <inlineHelpText>Package version at the time of running the method</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>