Salesforce CPQ/main/default/objects/InstallProcessorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MethodName__c</columns>
    <columns>Time__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>